--- a/package.json
+++ b/package.json
@@ -2,9 +2,19 @@
   "name": "cinema",
   "version": "0.0.1",
   "description": "Cinema web and backend solution",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
+    "run": "node app/app.js"
   },
   "author": "Jan Lipnican <yanlipnican@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "babel-preset-node6": "^11.0.0",
+    "express": "^4.14.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-less": "^3.1.0",
+    "gulp-nodemon": "^2.1.0",
+    "gulp-watch": "^4.3.9"
+  }
 }
