--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "babel-preset-node6": "^11.0.0",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.14.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-less": "^3.1.0",
