--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "glob": "^7.0.5",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-clean": "^0.3.2",
     "gulp-less": "^3.1.0",
     "gulp-nodemon": "^2.1.0",
     "gulp-watch": "^4.3.9",
+    "merge-stream": "^1.0.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.8"
   }
