--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "body-parser": "^1.15.2",
     "crypto": "0.0.3",
     "express": "^4.14.0",
-    "express-handlebars": "^3.0.0",
     "express-session": "^1.14.0",
     "glob": "^7.0.5",
     "gulp": "^3.9.1",
@@ -24,6 +23,7 @@
     "gulp-watch": "^4.3.9",
     "merge-stream": "^1.0.0",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.5.8"
+    "mongoose": "^4.5.8",
+    "twig": "^0.9.5"
   }
 }
