--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "babel-preset-node6": "^11.0.0",
-    "body-parser": "^1.15.2",
     "crypto": "0.0.3",
     "express": "^4.14.0",
+    "express-busboy": "^4.0.0",
     "express-session": "^1.14.0",
     "glob": "^7.0.5",
     "gulp": "^3.9.1",
